--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,6 @@
     "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "~3.4.0"
   }
 }
