--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -46,6 +47,6 @@
     "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "~3.4.0"
+    "tailwindcss": "^4.1.5"
   }
 }
