--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,14 @@
     "@types/node": "^16.18.126",
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.10.4",
+    "magic-ui-react": "^1.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^3.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -47,6 +50,6 @@
     "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^3.4.17"
   }
 }
