--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "@mui/material": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@types/node": "^16.18.126",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.4",
     "magic-ui-react": "^1.3.4",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
