--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.2.0",
     "typescript": "^4.9.5",
@@ -29,6 +30,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^react-router-dom$": "<rootDir>/node_modules/react-router-dom/dist/react-router-dom.production.min.js",
+      "^react-router$": "<rootDir>/node_modules/react-router/dist/react-router.production.min.js",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-router|react-router-dom|axios)/)"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +66,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
+    "identity-obj-proxy": "^3.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
   }
