--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.10.4",
+    "lucide-react": "^0.511.0",
     "magic-ui-react": "^1.3.4",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
