--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,4 @@ env/
 .roo/
 prd/
 designs/
-mcp_servers/mcp_settings.json
-mcp_servers/context7/mcp_settings.json
-mcp_servers/fetch-mcp
+mcp_servers/*
