--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.80.6",
     "@testing-library/dom": "^10.4.0",
     "@types/node": "^16.18.126",
     "@types/react-datepicker": "^6.2.0",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
