--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,11 +2,9 @@
 name = "flocus-backend"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Andrei Sorokin",email = "you@example.com"}
-]
+authors = [{ name = "Andrei Sorokin", email = "you@example.com" }]
+requires-python = ">=3.12,<4.0"
 readme = "README.md"
-requires-python = ">=3.12"
 dependencies = [
     "fastapi",
     "uvicorn[standard]",
@@ -20,14 +18,25 @@ dependencies = [
     "python-jose[cryptography]",
     "python-multipart (>=0.0.20,<0.0.21)",
     "async_generator (>=1.10,<2.0)",
+    "pydantic-ai",
+    "mcp-server",
+    "fastmcp (>=2.8.1,<3.0.0)",
 ]
 
-[tool.poetry]
-package-mode = false
+[project.optional-dependencies]
+dev = [
+    "pre-commit>=3.5.0",
+    "black>=24.2.0",
+    "flake8>=7.0.0",
+    "isort>=5.13.0",
+]
+
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
@@ -44,11 +53,3 @@ include = '\.pyi?$'
 profile = "black"
 multi_line_output = 3
 line_length = 120
-
-[project.optional-dependencies]
-dev = [
-    "pre-commit>=3.5.0",
-    "black>=24.2.0",
-    "flake8>=7.0.0",
-    "isort>=5.13.0"
-]
