--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "python-jose[cryptography]",
     "python-multipart (>=0.0.20,<0.0.21)",
     "async_generator (>=1.10,<2.0)",
-    "pydantic-ai",
+    "openai>=1.0.0",
+    "google-generativeai>=0.3.0",
     "mcp-server",
     "fastmcp (>=2.8.1,<3.0.0)",
 ]
@@ -29,6 +30,8 @@ dev = [
     "black>=24.2.0",
     "flake8>=7.0.0",
     "isort>=5.13.0",
+    "openai>=1.0.0",
+    "google-generativeai>=0.3.0",
 ]
 
 [tool.uv]
