feat: Implement database backup functionality with logging and configuration support

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@ MONGODB_DATABASE_NAME=flocus
 
 SECRET_KEY=your_secret_key_here
 
+BACKUP_DIRECTORY=./backups
 # LLM Settings
 LLM_PROVIDER=OpenAI
 LLM_API_KEY=your_llm_api_key_here
