--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.10.4",
