--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,6 @@
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
-    "react-markdown": "^8.0.7",
-    "remark-gfm": "^3.0.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.10.4",
@@ -27,9 +25,11 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
+    "react-markdown": "^8.0.7",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "tailwind-merge": "^3.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -38,7 +38,9 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "analyze": "ANALYZE=true npm run build",
+    "analyze:server": "npx webpack-bundle-analyzer build/static/js/*.js"
   },
   "jest": {
     "moduleNameMapper": {
@@ -79,6 +81,7 @@
     "autoprefixer": "^10.4.21",
     "identity-obj-proxy": "^3.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
