--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.0",
     "@tanstack/react-query": "^5.80.6",
@@ -49,7 +50,7 @@
       "\\.(css|less|scss|sass)$": "identity-obj-proxy"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-router|react-router-dom|axios)/)"
+      "node_modules/(?!(react-router|react-router-dom|axios|@formkit)/)"
     ]
   },
   "eslintConfig": {
