--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.10.4",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.511.0",
     "magic-ui-react": "^1.3.4",
     "react": "^19.1.0",
@@ -78,6 +79,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "identity-obj-proxy": "^3.0.0",
