--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "@formkit/auto-animate": "^0.8.2",
     "@hookform/resolvers": "^5.1.1",
     "@mui/material": "^7.1.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.80.6",
     "@testing-library/dom": "^10.4.0",
     "@types/node": "^16.18.126",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -33,6 +36,7 @@
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zod": "^3.25.56"
