--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.7"
   },
   "scripts": {
     "start": "craco start",
