--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.10.4",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.511.0",
