move utils and errors to a new place

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,8 +19,8 @@
     "paths": {
       "@/*": ["*"],
       "@/components/*": ["components/*"],
-      "@/lib/*": ["lib/*"],
-      "@/utils/*": ["lib/*"]
+      "@/utils/*": ["utils/*"],
+      "@/errors/*": ["errors/*"]
     }
   },
   "include": ["src"]
